# 7z-rs

./: Cargo.toml
src/: app.rs  main.rs  models.rs  parallel.rs  ui.rs  utils.rs
