[package]
name = "seven_zipper"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
zip = { version = "2.2.1", features = ["aes-crypto"] }
rfd = "0.15.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10.0"
crossbeam-channel = "0.5.13"
log = "0.4.22"
parking_lot = "0.12.3"
num_cpus = "1.16.0"



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false